Update new index tables

--- a/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
@@ -1,34 +1,30 @@
-<mat-card class="entity-index__card">
-  <mat-card-content class="entity-index__card__content">
-    <entities-table
-      [data]="entities"
-      [loaded]="initialLoaded"
-      [columnParams]="columnParams"
-      [filterString]="filterValue"
-      [serverError]="serverError"
-      (selected)="viewEntity($event.id)"
+<entities-table-wrapper
+  [data]="entities"
+  [loaded]="initialLoaded"
+  [columnParams]="columnParams"
+  [filterString]="filterValue"
+  [serverError]="serverError"
+  (selected)="viewEntity($event.id)"
 
-      [service]="service"
-      [showDelete]="false"
-      [showCopy]="true"
-      (viewClicked)="viewEntity($event.id)"
-      (copyClicked)="copyTemplate($event)"
-      (exportClicked)="exportEntity($event.id)"
-      (editClicked)="editEntity($event.id)"
-      (deleteClicked)="deleteEntity($event.id)"
-      (deleteManyClicked)="deleteMany($event)"
-      (refreshData)="refreshData()"
+  [service]="service"
+  [showDelete]="false"
+  [showCopy]="true"
+  (viewClicked)="viewEntity($event.id)"
+  (copyClicked)="copyTemplate($event)"
+  (exportClicked)="exportEntity($event.id)"
+  (editClicked)="editEntity($event.id)"
+  (deleteClicked)="deleteEntity($event.id)"
+  (deleteManyClicked)="deleteMany($event)"
+  (refreshData)="refreshData()"
 
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)"
-      (filterChanged)="filterValue = $event"
-      (searchChanged)="setSearchString($event)"
-    >
-    </entities-table>
-  </mat-card-content>
-</mat-card>
+  [limit]="limit"
+  [paginationValues]="paginationValues"
+  [previousDisabled]="page <= 0"
+  [nextDisabled]="!hasMorePages()"
+  (previous)="previous()"
+  (next)="next()"
+  (updateLimit)="updateLimit($event)"
+  (filterChanged)="filterValue = $event"
+  (searchChanged)="setSearchString($event)"
+>
+</entities-table-wrapper>
