--- a/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
+++ b/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
@@ -1,34 +1,29 @@
 <button mat-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addSelected.emit(true)"><mat-icon>add</mat-icon></button>
 
-<mat-card class="entity-index__card">
-  <mat-card-content class="entity-index__card__content">
+<entities-table-wrapper
+  [data]="entities"
+  [loaded]="initialLoaded"
+  [columnParams]="columnParams"
+  [filterString]="filterValue"
+  [serverError]="serverError"
+  (selected)="viewEntity($event.id)"
 
-    <entities-table
-      [data]="entities"
-      [loaded]="initialLoaded"
-      [columnParams]="columnParams"
-      [filterString]="filterValue"
-      [serverError]="serverError"
-      (selected)="viewEntity($event.id)"
+  [service]="service"
+  [showCopy]="service.hasWritePermission()"
+  (viewClicked)="viewEntity($event.id)"
+  (copyClicked)="copyRole($event)"
+  (deleteClicked)="deleteEntity($event.id)"
+  (deleteManyClicked)="deleteMany($event)"
+  (refreshData)="refreshData()"
 
-      [service]="service"
-      [showCopy]="service.hasWritePermission()"
-      (viewClicked)="viewEntity($event.id)"
-      (copyClicked)="copyRole($event)"
-      (deleteClicked)="deleteEntity($event.id)"
-      (deleteManyClicked)="deleteMany($event)"
-      (refreshData)="refreshData()"
-
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)"
-      (filterChanged)="filterValue = $event"
-      (searchChanged)="setSearchString($event)"
-    >
-    </entities-table>
-  </mat-card-content>
-</mat-card>
+  [limit]="limit"
+  [paginationValues]="paginationValues"
+  [previousDisabled]="page <= 0"
+  [nextDisabled]="!hasMorePages()"
+  (previous)="previous()"
+  (next)="next()"
+  (updateLimit)="updateLimit($event)"
+  (filterChanged)="filterValue = $event"
+  (searchChanged)="setSearchString($event)"
+>
+</entities-table-wrapper>
