--- a/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
@@ -2,8 +2,7 @@
 
   <blue-header [items]="crumbItems" [titleValue]="'SHIPPINGRECEIPT_INDEX_TITLE'"></blue-header>
 
-  <advanced-entities-table
-    *ngIf="featuresFlagService.isEnabled('advanced-index-tables'); else oldtable"
+  <entities-table-wrapper
     [data]="entities"
     [loaded]="initialLoaded"
     [columnParams]="columnParams"
@@ -30,42 +29,6 @@
     (filterChanged)="filterValue = $event"
     (searchChanged)="setSearchString($event)"
   >
-  </advanced-entities-table>
+  </entities-table-wrapper>
 
-  <ng-template #oldtable>
-    <mat-card class="entity-index__card">
-      <mat-card-content class="entity-index__card__content">
-
-        <entities-table
-          [data]="entities"
-          [loaded]="initialLoaded"
-          [columnParams]="columnParams"
-          [filterString]="filterValue"
-          [serverError]="serverError"
-          (selected)="viewEntity($event.id)"
-
-          [service]="service"
-          (viewClicked)="viewEntity($event.id)"
-          (copyClicked)="copyEntity($event.id)"
-          (exportClicked)="exportEntity($event.id)"
-          (editClicked)="editEntity($event.id)"
-          (deleteClicked)="deleteEntity($event.id)"
-          (deleteManyClicked)="deleteMany($event)"
-          (refreshData)="refreshData()"
-
-          [limit]="limit"
-          [paginationValues]="paginationValues"
-          [previousDisabled]="page <= 0"
-          [nextDisabled]="!hasMorePages()"
-          (previous)="previous()"
-          (next)="next()"
-          (updateLimit)="updateLimit($event)"
-          (filterChanged)="filterValue = $event"
-          (searchChanged)="setSearchString($event)"
-        >
-        </entities-table>
-
-      </mat-card-content>
-    </mat-card>
-  </ng-template>
 </div>
