--- a/src/app/dialog-modals/return-dialog/return-dialog.component.html
+++ b/src/app/dialog-modals/return-dialog/return-dialog.component.html
@@ -26,6 +26,6 @@
 
   <div class="buttons">
     <button mat-button (click)="close()">CANCEL</button>
-    <button mat-button>PROCESS</button>
+    <button mat-button (click)="processReturn()">PROCESS</button>
   </div>
 </div>
