--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -56,12 +56,12 @@
                 <input matInput placeholder="{{'PROFILE_DETAILS_EMAIL' | translate}}" [(ngModel)]="user.email">
               </mat-form-field>
 
-              <div class="profile-page__content__general__data__dropdown" *ngIf="translationsService.featureFlagService.isEnabled('user-settings-languages')">
+              <div class="profile-page__content__general__data__dropdown" *ngIf="featureFlagsService.isEnabled('user-settings-languages')">
 
                 <dropdown-component
                   [selected]="userSettingsBackup.language || 'English'"
                   [placeholder]="'PROFILE_DETAILS_LANGUAGE' | translate"
-                  [options]="translationsService.getLanguages()"
+                  [options]="getLanguages()"
                   (onSelect)="setLanguage($event)">
                 </dropdown-component>
 
