Prevent notification text to change position when switching between read/unread.

--- a/src/app/navigation/notifications-quick/notifications-quick.component.scss
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.scss
@@ -35,7 +35,9 @@
         .unread {
           background-color: #049AE4 !important;
           border-radius: 50%;
-          border: 1px solid #049AE4
+          border: 1px solid #049AE4;
+          margin-right: -11px;
+          margin-left: 10px;
         }
       }
 
