--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
@@ -5,7 +5,7 @@
       <ng-container *ngIf="mode === modes.View">
         <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
         <mat-menu #editOptions="matMenu" x-position="before">
-          <button mat-menu-item (click)="changeMode.emit(modes.Update); enableEdit()">{{'MERCHANTPROVIDER_INFO_EDIT' | translate}}</button>
+          <button mat-menu-item (click)="changeMode.emit(modes.Update); enableEdit('shouldEditSettings')">{{'MERCHANTPROVIDER_INFO_EDIT' | translate}}</button>
         </mat-menu>
       </ng-container>
     </div>
@@ -36,6 +36,37 @@
 
     </div>
     <div *ngIf="mode !== modes.View && shouldEditSettings" class="entity-view__card__actions merchant-provider--create__buttons">
+      <div (click)="cancel.emit(true)">{{'MERCHANTPROVIDER_INFO_CANCEL' | translate}}</div>
+      <div (click)="saveProvider(merchantProviderForm.form.valid)">{{'MERCHANTPROVIDER_INFO_SAVE' | translate}}</div>
+    </div>
+  </div>
+
+  <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
+    <div class="entity-view__card__header">
+      <div class="entity-view__card__header__title">{{'MERCHANTPROVIDER_INFO_GATEWAY_GENERALTITLE' | translate}}</div>
+      <ng-container *ngIf="mode === modes.View">
+        <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
+        <mat-menu #editOptions="matMenu" x-position="before">
+          <button mat-menu-item (click)="changeMode.emit(modes.Update); enableEdit()">{{'MERCHANTPROVIDER_INFO_EDIT' | translate}}</button>
+        </mat-menu>
+      </ng-container>
+    </div>
+
+    <div class="entity-view__card__content merchant-provider-view__details">
+      <mat-form-field class="entity-view__card__content__item">
+        <input [disabled]="mode === modes.View || (mode === modes.Update && !shouldEditGeneral)" matInput placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_MIDNUMBER' | translate}}" name="midNumber" [(ngModel)]="entity.gateway.midnumber" type="text">
+      </mat-form-field>
+
+      <mat-form-field class="entity-view__card__content__item">
+        <input [disabled]="mode === modes.View || (mode === modes.Update && !shouldEditGeneral)" matInput placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_PROCESSOR' | translate}}" name="processor" [(ngModel)]="entity.gateway.processor" type="text">
+      </mat-form-field>
+
+      <mat-form-field class="entity-view__card__content__item">
+        <input [disabled]="mode === modes.View || (mode === modes.Update && !shouldEditGeneral)" matInput placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_DESCRIPTOR' | translate}}" name="descriptor" [(ngModel)]="entity.gateway.descriptor" type="text">
+      </mat-form-field>
+    </div>
+
+    <div *ngIf="mode !== modes.View && shouldEditGeneral" class="entity-view__card__actions merchant-provider--create__buttons">
       <div (click)="cancel.emit(true)">{{'MERCHANTPROVIDER_INFO_CANCEL' | translate}}</div>
       <div (click)="saveProvider(merchantProviderForm.form.valid)">{{'MERCHANTPROVIDER_INFO_SAVE' | translate}}</div>
     </div>
