Align number of notifications in top navbar.

--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -173,12 +173,13 @@ $main-color: #9B9A9B;
       background: #FB1F47;
       height: 24px;
       width: 24px;
-      line-height: 24px;
+      line-height: 26px;
       text-align: center;
       font-weight: 600;
       font-size: 10px;
       color: #ffffff;
       box-shadow: 0 0 4px black;
+      padding-right: 1px;
     }
   }
 }
