--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -1,54 +1,42 @@
 <div *ngIf="entity; else spinner" class="entity-view">
 
-  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name"></blue-header>
+  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name">
+    <entity-view-tag *ngIf="tagsService.hasReadPermission()" [inAssociatedTags]="true" [entityId]="entityId"></entity-view-tag>
+  </blue-header>
 
-   <!--<form #inputForm="ngForm" class="entity-view__info">
-      <div class="actions">
-        <entity-view-tag *ngIf="tagsService.hasReadPermission()" [inAssociatedTags]="true" [entityId]="entityId"></entity-view-tag>
+  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
+
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
+      <div class="flex-custom flex-custom--wrap">
+
+        <merchant-provider-add-new [entity]="entity"
+                                   [mode]="viewMode ? modes.View : modes.Update"
+                                   [formInvalid]="formInvalid"
+                                   (cancel)="cancelUpdate()"
+                                   (changeMode)="setMode($event)"
+                                   (save)="saveProvider($event)">
+        </merchant-provider-add-new>
+
       </div>
-    </form>
+    </mat-tab>
 
-    <ng-template #editableMode>
-      <mat-form-field *ngIf="updateMode || addMode; else viewName" [class.error]="formInvalid && !entity.name">
-        <input required #nameFieldAddMode matInput name="name" [(ngModel)]="entity.name">
-      </mat-form-field>
-    </ng-template>-->
+    <mat-tab>
+      <coming-soon [inPage]="true"></coming-soon>
+    </mat-tab>
 
-    <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
-
-    <mat-tab-group [(selectedIndex)]="selectedIndex">
-      <mat-tab>
-        <div class="flex-custom flex-custom--wrap">
-
-          <merchant-provider-add-new [entity]="entity"
-                                     [mode]="viewMode ? modes.View : modes.Update"
-                                     [formInvalid]="formInvalid"
-                                     (cancel)="cancelUpdate()"
-                                     (changeMode)="setMode($event)"
-                                     (save)="saveProvider($event)">
-          </merchant-provider-add-new>
-
-        </div>
-      </mat-tab>
-
-      <mat-tab>
-        <coming-soon [inPage]="true"></coming-soon>
-      </mat-tab>
-
-      <mat-tab>
-        <table-memory class="merchant-provider-view__merchant-groups"
-                      [data]="entity.merchantProviderGroups || []"
-                      [textOptions]="merchantProviderGroupText"
-                      [associationEnabled]="false"
-                      [columnParams]="merchantProviderGroupColumnParams"
-                      [associateDataMapper]="merchantProviderGroupMapper"
-                      [dissociationEnabled]="false"
-                      (view)="navigateToMerchantProviderGroup($event)">
-        </table-memory>
-      </mat-tab>
-    </mat-tab-group>
-
-
+    <mat-tab>
+      <table-memory class="merchant-provider-view__merchant-groups"
+                    [data]="entity.merchantProviderGroups || []"
+                    [textOptions]="merchantProviderGroupText"
+                    [associationEnabled]="false"
+                    [columnParams]="merchantProviderGroupColumnParams"
+                    [associateDataMapper]="merchantProviderGroupMapper"
+                    [dissociationEnabled]="false"
+                    (view)="navigateToMerchantProviderGroup($event)">
+      </table-memory>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
