--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.scss
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.scss
@@ -4,16 +4,6 @@
   }
 }
 
-.actions {
-  margin: auto 60px auto auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.entity-view__info__edit {
-  margin: 0;
-}
-
 entity-view-tag {
-  margin: 15px 0 0 auto;
+  margin: 2px 0 -4px 0;
 }
