--- a/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
+++ b/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
@@ -4,6 +4,10 @@
 
 .toggler {
   cursor: pointer;
+  color: rgba(255,255,255,0.7);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
 }
 
 .acl-modal-container {
