--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="entity; else spinner" class="entity-view">
 
-  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name"></blue-header>
+  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name">
+    <entity-view-entityacl *ngIf="authService.isActiveAclMasterAccount()" [entityId]="entityId" [type]="'emailtemplate'"></entity-view-entityacl>
+  </blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
