--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -62,3 +62,10 @@
   display: flex;
   flex-direction: column;
 }
+
+entity-view-entityacl {
+  padding: 6px 8px;
+  border-radius: 4px;
+  border: 2px solid rgba(255,255,255,0.4);
+  background: #3D6EB3;
+}
