--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.scss
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.scss
@@ -1,10 +1,11 @@
 .container {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
+  justify-content: space-between;
 }
 
 .notifications-content {
-  width: calc(100% - 350px);
+  width: calc(100% - 330px);
   margin-right: 25px;
 
   .header {
@@ -15,17 +16,43 @@
       height: 33px;
     }
 
+    mat-button-toggle-group {
+      @media only screen and (max-width: 1300px) {
+        margin-right: auto;
+        margin-left: 0;
+        order: 1;
+      }
+    }
+
     .mark-read {
       margin-left: auto;
+      box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+      padding: 12px 14px 9px 14px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      line-height: 12px;
+
+      @media only screen and (max-width: 1300px) {
+        margin: 6px auto 25px 0;
+      }
+    }
+
+    .mrw-bi-input {
+      @media only screen and (max-width: 1300px) {
+        margin-right: auto;
+        margin-left: 0;
+      }
+    }
+
+    @media only screen and (max-width: 1300px) {
+      margin-bottom: 5px;
+      flex-direction: column;
     }
   }
 }
 
 .mrw-button.mark-read {
-
   background-color: white;
-  color: rgba(0, 0, 0, 0.38)
-
+  color: rgba(0, 0, 0, 0.38);
 }
 
 .notifications-container {
