--- a/src/app/graph-qldocs/components/query-mutation-card/query-mutation-card.component.scss
+++ b/src/app/graph-qldocs/components/query-mutation-card/query-mutation-card.component.scss
@@ -82,11 +82,11 @@
             max-width: 124px;
             display: flex;
           }
+        }
 
-          span {
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
+        button {
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
     }
