--- a/src/app/graph-qldocs/components/side-container/side-container.component.html
+++ b/src/app/graph-qldocs/components/side-container/side-container.component.html
@@ -7,7 +7,7 @@
   <div class="details">
     <div class="response-header">
       <div class="title">EXAMPLE RESPONSE</div>
-      <button (click)="navigateToResponseType()">{{fieldName}}</button>
+      <button mat-button (click)="navigateToResponseType()">{{fieldName}}</button>
     </div>
     <pre>{{response}}</pre>
   </div>
