--- a/src/app/graph-qldocs/components/side-container/side-container.component.scss
+++ b/src/app/graph-qldocs/components/side-container/side-container.component.scss
@@ -47,6 +47,7 @@
       margin: 10px auto 10px 0;
       border: 1px rgba(0, 0, 0, 0.12);
       cursor: pointer;
+      line-height: 14px;
     }
   }
 
