--- a/src/app/graph-qldocs/components/type-card/type-card.component.html
+++ b/src/app/graph-qldocs/components/type-card/type-card.component.html
@@ -22,13 +22,13 @@
     <tbody>
     <tr *ngFor="let arg of type.fields; let i = index;">
       <td>{{ arg.name}}</td>
-      <td (click)="navigateToType(arg)"><span class="field-type">{{ arg.type.name || arg.type.ofType.name || arg.type.ofType.ofType.name}}</span></td>
+      <td (click)="navigateToType(arg)"><button mat-button class="field-type">{{ arg.type.name || arg.type.ofType.name || arg.type.ofType.ofType.name}}</button></td>
       <td>{{ arg.type.kind || arg.type.ofType.kind || arg.type.ofType.ofType.kind }}</td>
       <td>{{ arg.description }}</td>
     </tr>
     <tr *ngFor="let arg of type.inputFields; let i = index;">
       <td>{{ arg.name }}</td>
-      <td (click)="navigateToType(arg)"><span class="field-type">{{ arg.type.name || arg.type.ofType.name || arg.type.ofType.ofType.name }}</span></td>
+      <td (click)="navigateToType(arg)"><button mat-button class="field-type">{{ arg.type.name || arg.type.ofType.name || arg.type.ofType.ofType.name }}</button></td>
       <td>{{ arg.type.kind || arg.type.ofType.kind || arg.type.ofType.ofType.kind }}</td>
       <td>{{ arg.description }}</td>
     </tr>
