--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -21,10 +21,10 @@
           <c-dashboard-setup></c-dashboard-setup>
         </mat-tab>
         <mat-tab [hidden]="availableDashboards.length < 2">
-          <c-dashboard-low-data [renderChart]="renderLow"></c-dashboard-low-data>
+          <c-dashboard-low-data [renderLowChart]="renderLow"></c-dashboard-low-data>
         </mat-tab>
         <mat-tab [hidden]="availableDashboards.length < 3">
-          <c-dashboard-full [renderCharts]="renderFull"></c-dashboard-full>
+          <c-dashboard-full [renderFullChart]="renderFull"></c-dashboard-full>
         </mat-tab>
       </mat-tab-group>
     </ng-container>
