--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -1,4 +1,4 @@
-<div inViewport (inside)="fetch()" class="dashboard__gray-table-chart" [class.simpleChart]="simpleChart">
+<div inViewport (inside)="fetch()" class="dashboard__gray-table-chart">
   <div class="dashboard__gray-table-chart__title">
     <div class="main">{{'DASHBOARD_EVENTSFUNNEL_TITLE' | translate}}</div>
     <div class="options">
@@ -9,8 +9,8 @@
         <button mat-menu-item (click)="changeNumberOfDays(30)">Month</button>
       </mat-menu>
 
-      <span class="event-type-options" *ngIf="showFunnelTable" mat-icon-button [matMenuTriggerFor]="eventTypeOptions">{{(eventTypeMap[eventType] | translate)}}</span>
-      <mat-icon *ngIf="showFunnelTable" [matMenuTriggerFor]="eventTypeOptions">arrow_drop_down</mat-icon>
+      <span class="event-type-options" *ngIf="showEventOptions" mat-icon-button [matMenuTriggerFor]="eventTypeOptions">{{(eventTypeMap[eventType] | translate)}}</span>
+      <mat-icon *ngIf="showEventOptions" [matMenuTriggerFor]="eventTypeOptions">arrow_drop_down</mat-icon>
       <mat-menu #eventTypeOptions="matMenu" x-position="before">
         <button mat-menu-item (click)="changeEventType('click')">{{'DASHBOARD_EVENTSFUNNEL_CLICK' | translate}}</button>
         <button mat-menu-item (click)="changeEventType('lead')">{{'DASHBOARD_EVENTSFUNNEL_LEAD' | translate}}</button>
@@ -19,20 +19,20 @@
         <button mat-menu-item (click)="changeEventType('confirm')">{{'DASHBOARD_EVENTSFUNNEL_CONFIRM' | translate}}</button>
       </mat-menu>
     </div>
-    <mat-icon (click)="showFunnelTable = true" [class.selected]="showFunnelTable" class="chart-statistics chart-statistics__chart">show_chart</mat-icon>
-    <mat-icon (click)="showFunnelTable = false" [class.selected]="!showFunnelTable" class="chart-statistics chart-statistics__graph">border_all</mat-icon>
+    <mat-icon (click)="showEventOptions = true" [class.selected]="showEventOptions" class="chart-statistics chart-statistics__chart">show_chart</mat-icon>
+    <mat-icon (click)="showEventOptions = false" [class.selected]="!showEventOptions" class="chart-statistics chart-statistics__graph">border_all</mat-icon>
   </div>
 
   <ng-container *ngIf="!serverError; else error">
-    <mat-spinner *ngIf="(showFunnelTable && !renderChart) || (!showFunnelTable && !funnel)"></mat-spinner>
-    <chart *ngIf="showFunnelTable && renderChart" [options]="chartOptions" (load)="saveChart($event.context, true)"></chart>
+    <mat-spinner *ngIf="drawMatSpinner()"></mat-spinner>
+    <chart *ngIf="drawGraph()" [options]="chartOptions" (load)="saveChart($event.context, true)"></chart>
   </ng-container>
 
   <ng-template #error>
     <server-error-message (refresh)="refresh()"></server-error-message>
   </ng-template>
 
-  <div *ngIf="funnel && !showFunnelTable" class="table-container">
+  <div *ngIf="drawTable()" class="table-container">
 
     <div class="column first-column">
       <div class="item item--title"></div>
