--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
@@ -2,7 +2,7 @@
 
 <div class="body">
   <div class="header">
-    <button mat-button (click)="addNewRole()">NEW</button>
+    <button mat-button class="add-new-button" *ngIf="roleService.hasWritePermission()" (click)="addNewRole()">NEW</button>
 
     <div class="mrw-bi-input">
       <mat-form-field [floatLabel]="'never'">
