--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
@@ -97,7 +97,10 @@
 }
 
 .mrw-bi-input {
-  margin-left: 24px;
   color: #5F6368;
   background-color: rgba(0, 0, 0, 0.12);
+}
+
+.add-new-button {
+  margin-right: 24px;
 }
