Align dropdown arrow with equivalent text on funnel graph.

--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
@@ -59,6 +59,10 @@
   .event-type-options {
     margin-left: 20px;
   }
+
+  @media only screen and (max-width: 1270px) {
+    min-width: 140px;
+  }
 }
 
 .mat-icon {
