Small adjustments on index tables styles

--- a/src/app/pages/components/entities-table/entities-table.component.scss
+++ b/src/app/pages/components/entities-table/entities-table.component.scss
@@ -21,6 +21,13 @@ mat-checkbox {
   flex-wrap: wrap;
 }
 
+.cell--align-right {
+  .wrapper {
+    display: block;
+    text-align: right;
+  }
+}
+
 .header-float {
   position: fixed;
   width: 100%;
